--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ repositories {
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("com.linecorp.bot:line-bot-spring-boot:1.6.0")
+    compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.2.0")
+    compile("mysql:mysql-connector-java")
     testCompile('org.springframework.boot:spring-boot-starter-test')
     compileOnly("org.projectlombok:lombok:1.16.12")
 }
